# opticonn

./: .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  Makefile  README.md  constraints.txt  install.sh  mkdocs.yml  package_snapshot.txt  paper.md  pyproject.toml
.github/workflows/: docker-smoke.yml  docs.yml
archive/scripts/: check_atlas_dimensions.py  check_tags.py  download_mousley_data.py  list_assets.py  pre_test_validation.py  qa_cross_validator.py  run_parameter_sweep.py  statistical_analysis.py  (+2 more)
configs/: demo_config.json  demo_cv_config.json  dsi_studio_config_schema.json  golden_master_sweep.json  mousley_comparison.json  mrtrix_backend_draft_config.json  mrtrix_backend_draft_schema.json
docs/: README.md  cli_steps.md  configuration.md  demo.md  demos.md  index.md  installation.md  methods.md  mrtrix_integration_draft.md  rt_d_integration.md  troubleshooting.md  user_guide.md  validation.md  workflows.md
dsi_studio_tools/: extract_connectivity_matrices.py  validate_setup.py
scripts/: __init__.py  aggregate_network_measures.py  bayesian_optimizer.py  bootstrap_qa_validator.py  check_atlas_dimensions.py  check_script_compliance.py  check_tags.py  compute_network_measures_from_connectivity.py  cross_validation_bootstrap_optimizer.py  docs_serve.sh  download_mousley_data.py  extract_connectivity_matrices.py  json_validator.py  list_assets.py  metric_optimizer.py  mrtrix_discover_bundle.README.md  mrtrix_discover_bundle.py  mrtrix_pilot_connectome.py  mrtrix_real_demo.py  mrtrix_tune.README.md  mrtrix_tune.py  opticonn_cv_demo.py  opticonn_demo.py  opticonn_hub.py  opticonn_mrtrix_demo.py  optimal_selection.py  run_demo.py  run_full_demo.py  run_multi_atlas_optimization.py  run_pipeline.py  sensitivity_analyzer.py  smoke_local.sh  statistical_metric_comparator.py  sweep_utils.py  test_integrity_checks.py  validate_setup.py
tests/: test_cli_help.py  test_integrity_checks.py
(+9 files in other folders)
